style: 사용하지 않는 필드 정리